// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/TileGrid custom grid size 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #f1f5f5;
  border: 1px transparent solid;
  margin-bottom: 2rem;
  padding: 0;
  -webkit-transition: all 0.3s,color 0s,fill 0s;
  transition: all 0.3s,color 0s,fill 0s;
}

.c2 {
  border-bottom: 2px solid #c4c4c4;
}

.c3 {
  padding: 1rem 1.25rem;
}

.c4 {
  padding: 0 1rem;
  margin-bottom: 1rem;
}

<div
  className="c0"
>
  <div
    className="FqmtD"
  >
    <div
      className="iFXKmx"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="iFXKmx"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="iFXKmx"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="iFXKmx"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="iFXKmx"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="iFXKmx"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/TileGrid default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #f1f5f5;
  border: 1px transparent solid;
  margin-bottom: 2rem;
  padding: 0;
  -webkit-transition: all 0.3s,color 0s,fill 0s;
  transition: all 0.3s,color 0s,fill 0s;
}

.c2 {
  border-bottom: 2px solid #c4c4c4;
}

.c3 {
  padding: 1rem 1.25rem;
}

.c4 {
  padding: 0 1rem;
  margin-bottom: 1rem;
}

<div
  className="c0"
>
  <div
    className="FqmtD"
  >
    <div
      className="dYnkQr"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="dYnkQr"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="dYnkQr"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="dYnkQr"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="dYnkQr"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
    <div
      className="dYnkQr"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            This is header
          </div>
        </div>
        <div
          className="c3"
        >
          <p>
            Tile content
          </p>
        </div>
        <div
          className="c4"
        >
          This is footer
        </div>
      </div>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;
